--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "linux"
   ],
   "engines": {
-    "node": "^0.10.16 || ^0.11.13"
+    "node": "^0.8.6 || ^0.10.16 || ^0.11.13"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
-    "mocha": "^2.0.1"
+    "expect.js": "~0.3.1",
+    "mocha": "~2.1.0"
   }
 }
