--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "linux"
   ],
   "engines": {
+    "iojs": "^1.0.1",
     "node": "^0.8.6 || ^0.10.16 || ^0.11.13"
   },
   "devDependencies": {
