--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
   ],
   "engines": {
     "iojs": "^1.0.1",
-    "node": "^0.8.6 || ^0.10.16 || ^0.11.13"
+    "node": "^0.8.6 || ^0.9.1 || ^0.10.0 || ^0.11.13"
   },
   "devDependencies": {
     "expect.js": "~0.3.1",
     "mocha": "~2.1.0"
+  },
+  "dependencies": {
+    "nan": "~1.5.1"
   }
 }
