--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "engines": {
     "iojs": "^1.0.1",
-    "node": "^0.8.6 || ^0.9.1 || ^0.10.0 || ^0.11.13"
+    "node": "^0.8.6 || ^0.9.1 || ^0.10.0 || ^0.11.13 || ^0.12.0"
   },
   "devDependencies": {
     "expect.js": "~0.3.1",
