--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
  - "0.11"
  - "0.10"
  - "0.8"
+ - "iojs"
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libbsd-dev
