--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
- - "0.12"
- - "0.10"
+ - "stable"
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libbsd-dev
